# bluetool

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bluetool.py  requirements.txt  setup.cfg  setup.py
bluetool/: SPP.py  __init__.py  agent.py  blueserver.py  bluetool.py  bluezutils.py  utils.py
examples/: bluetooth_agent.py  bluetooth_spp.py  scanning.py
