[metadata]
name = bluetool
author = Aleksandr Aleksandrov
author_email = aleksandr.aleksandrov@emlid.com
summary = A simple Python API for Bluetooth D-Bus calls.
description-file = README.md
home-page = https://github.com/emlid/bluetooth-dbus
license = GPLv3+
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    bluetool

[flake8]
max-line-length = 100
